--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@rails/webpacker": "^3.1.1",
-    "coffeescript": "1.12.7"
+    "coffeescript": "1.12.7",
+    "vue": "^2.5.11",
+    "vue-loader": "^13.5.1",
+    "vue-template-compiler": "^2.5.11"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
