--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "@rails/webpacker": "^3.1.1",
     "coffeescript": "1.12.7",
-    "vue": "^2.5.11",
+    "vue": "^2.5.10",
     "vue-loader": "^13.5.1",
-    "vue-template-compiler": "^2.5.11"
+    "vue-social-sharing": "^2.3.3",
+    "vue-template-compiler": "^2.5.11",
+    "vue2-google-maps": "^0.8.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
