--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@rails/webpacker": "^3.1.1",
     "coffeescript": "1.12.7",
-    "vue": "^2.5.10",
+    "vue": "2.5.9",
     "vue-loader": "^13.5.1",
     "vue-social-sharing": "^2.3.3",
     "vue-template-compiler": "^2.5.11",
