--- a/spec/dummy/public/packs/manifest.json
+++ b/spec/dummy/public/packs/manifest.json
@@ -1,8 +1,8 @@
 {
-  "application.js": "/packs/application-8cf2e820e97e19ec7ac9.js",
-  "application.js.map": "/packs/application-8cf2e820e97e19ec7ac9.js.map",
-  "hello_vue.css": "/packs/hello_vue-545a528c2f51a27e3366244e88c6148a.css",
-  "hello_vue.css.map": "/packs/hello_vue-545a528c2f51a27e3366244e88c6148a.css.map",
-  "hello_vue.js": "/packs/hello_vue-7dc4bcb65bb81ec1f831.js",
-  "hello_vue.js.map": "/packs/hello_vue-7dc4bcb65bb81ec1f831.js.map"
+  "application.js": "/packs/application-a7d7573e252cbe4fc868.js",
+  "application.js.map": "/packs/application-a7d7573e252cbe4fc868.js.map",
+  "spp_vue_modern.css": "/packs/spp_vue_modern-428ac7681af9f9a86b08a189ec1fff67.css",
+  "spp_vue_modern.css.map": "/packs/spp_vue_modern-428ac7681af9f9a86b08a189ec1fff67.css.map",
+  "spp_vue_modern.js": "/packs/spp_vue_modern-ce1dd63cbfdfce00cafb.js",
+  "spp_vue_modern.js.map": "/packs/spp_vue_modern-ce1dd63cbfdfce00cafb.js.map"
 }
