--- a/spec/dummy/package.json
+++ b/spec/dummy/package.json
@@ -6,7 +6,8 @@
     "vue-loader": "^13.5.1",
     "vue-social-sharing": "^2.3.3",
     "vue-template-compiler": "2.5.9",
-    "vue2-google-maps": "^0.8.4"
+    "vue2-google-maps": "^0.8.4",
+    "vuetify": "^0.17.5"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.9.7"
