--- a/spec/dummy/public/packs/manifest.json
+++ b/spec/dummy/public/packs/manifest.json
@@ -1,8 +1,16 @@
 {
-  "application.js": "/packs/application-a7d7573e252cbe4fc868.js",
-  "application.js.map": "/packs/application-a7d7573e252cbe4fc868.js.map",
+  "application.js": "/packs/application-1ecf0a6988c300ea1e67.js",
+  "application.js.map": "/packs/application-1ecf0a6988c300ea1e67.js.map",
+  "spp_lite.css": "/packs/spp_lite-428ac7681af9f9a86b08a189ec1fff67.css",
+  "spp_lite.css.map": "/packs/spp_lite-428ac7681af9f9a86b08a189ec1fff67.css.map",
+  "spp_lite.js": "/packs/spp_lite-105853db434289db8a31.js",
+  "spp_lite.js.map": "/packs/spp_lite-105853db434289db8a31.js.map",
   "spp_vue_modern.css": "/packs/spp_vue_modern-428ac7681af9f9a86b08a189ec1fff67.css",
   "spp_vue_modern.css.map": "/packs/spp_vue_modern-428ac7681af9f9a86b08a189ec1fff67.css.map",
-  "spp_vue_modern.js": "/packs/spp_vue_modern-78ab25db016f9f0800d4.js",
-  "spp_vue_modern.js.map": "/packs/spp_vue_modern-78ab25db016f9f0800d4.js.map"
+  "spp_vue_modern.js": "/packs/spp_vue_modern-d89067b75386485520c5.js",
+  "spp_vue_modern.js.map": "/packs/spp_vue_modern-d89067b75386485520c5.js.map",
+  "spp_vuetify.css": "/packs/spp_vuetify-428ac7681af9f9a86b08a189ec1fff67.css",
+  "spp_vuetify.css.map": "/packs/spp_vuetify-428ac7681af9f9a86b08a189ec1fff67.css.map",
+  "spp_vuetify.js": "/packs/spp_vuetify-a63a6e5ca2d3b8dd4adf.js",
+  "spp_vuetify.js.map": "/packs/spp_vuetify-a63a6e5ca2d3b8dd4adf.js.map"
 }
